2009-09-07  Kai Tietz  <kai.tietz@onevision.com>

	* winsock.h (mswsock.h): Add include.
	By this we add some missing defines for winsock.h file.
	Additionally I cleaned up it a bit.
	* mswsock.h (winsock2.h): Add include.

2009-09-06  Kai Tietz  <kai.tietz@onevision.com>

	* ...: Improve -std=cx9 support of header-set.
	* _mingw_mac.h (__MINGW_EXTENSION): New.

	PR/2849068 
	* inttypes.h: Treat __USE_MINGW_ANSI_STDIO for PRI.. & SCN...
	* _mingw_print_pop.h: Likewise.
	* _mingw_print_push.h: Likewise.

2009-09-05  Ozkan Sezer  <sezeroz@gmail.com>

	* _findfirst64i32, _findnext64i32, _fstat64i32, _fstat, _stat64i32,
	_stat, _wfindfirst64i32, _wfindnext64i32, _wstat64i32, _wstat: Zero
	the input buffer in case the function we wrap around fails. This
	fixes the native builds of binutils/bfd due to an unitialized use
	warning about a stat structure, too.

2009-08-28  Kai Tietz  <kai.tietz@onevision.com>

	PR/2846177
	* intrin.h (__cplusplus): Guard intrin86.h file by extern "C" for c++.
	Sadly, those gcc headers are lacking this guard.

2009-08-28  Ozkan Sezer  <sezeroz@gmail.com>

	* sys/stat.h: Define stat64 as _stat64 and fstat64 as _fstat64
	for POSIX compatibility.
	* wchar.h: Likewise.

2009-08-26  Kai Tietz  <kai.tietz@onevision.com>

	* ...: Cleanup with _INTEGRAL_MAX_BITS.
	* ...: Fix 32-bit case with _USE_32BIT_TIME_T.
	* _mingw.h: Make for 32-bit _USE_32BIT_TIME_T default behavior.

2009-08-23  Ozkan Sezer  <sezeroz@gmail.com>

	* float.h (_chgsignl): Removed the old wrappers and added the new
	implementation.
	* math.h (chgsignl): Likewise.

2009-08-23  Kai Tietz  <kai.tietz@onevision.com>

	* intrin.h: Use intrin86.h from gcc.
	* winbase.h, winnt.h: Adjust intrinsic to be prototypes and compatible with
	gnu's intrin86.h definitions.

	* ...: Fix missing prototypes before inlined functions are implemented.

2009-08-22  Ozkan Sezer  <sezeroz@gmail.com>

	* fstat, stat, wstat: Instead of calling a function, "inline" (copy