@@ -138,7 +138,7 @@ __CRT_INLINE double _Complex __MINGW_ATTRIB_CONST conj (double _Complex _Z)
 __CRT_INLINE  double __MINGW_ATTRIB_CONST carg (double _Complex _Z)
 {
   double res;
-  __asm__  ("fpatan;"
+  __asm__ __volatile__ ("fpatan;"
 	   : "=t" (res) : "0" (__real__ _Z), "u" (__imag__ _Z) : "st(1)");
   return res;
 }
@@ -163,7 +163,7 @@ __CRT_INLINE float _Complex __MINGW_ATTRIB_CONST conjf (float _Complex _Z)
 __CRT_INLINE  float __MINGW_ATTRIB_CONST cargf (float _Complex _Z)
 {
   float res;
-  __asm__  ("fpatan;"
+  __asm__  __volatile__ ("fpatan;"
 	   : "=t" (res) : "0" (__real__ _Z), "u" (__imag__ _Z) : "st(1)");
   return res;
 }
@@ -187,7 +187,7 @@ __CRT_INLINE long double _Complex __MINGW_ATTRIB_CONST conjl (long double _Compl
 __CRT_INLINE  long double __MINGW_ATTRIB_CONST cargl (long double _Complex _Z)
 {
   long double res;
-  __asm__  ("fpatan;"
+  __asm__ __volatile__ ("fpatan;"
 	   : "=t" (res) : "0" (__real__ _Z), "u" (__imag__ _Z) : "st(1)");
   return res;
 }
